[b]Version 0.5.62[/b] (not released yet):

(2007-10-25)
 * Now the -nostop-xscreensaver option is passed to mplayer if the screensaver
   is not to be disabled.
 * Added two new options for the subtitle menu: Size+ and Size-. They change
   the subtitle size. This also changes the meaning of the Scale setting in
   Preferences->Subtitles, it specifies now the default subtitle size for 
   new videos.
   These new options use the new mplayer slave command sub_scale, so changing
   the size won't require to restart mplayer. Unfortunately this doesn't work
   with the SSA/ASS lib, in this case mplayer will be restarted.
   If you use an old version of mplayer which doesn't have the sub_scale 
   slave command, you need to set to "true" the following option in the 
   config file: change_sub_scale_requires_restart

(2007-10-22)
 * Reorganized the layout of Preferences->Subtitles.
 * Preferences->Keyboard and mouse: the list of available actions for mouse
   buttons has been reduced. Only the most useful for mouse buttons are there.
 * Now the middle click button is also configurable. The default action is
   mute.
 * Now the default icon theme is Nuvola.
 * Added two new options in Preferences->Performance for H.264 videos:
   Skip loop filter (the famous "-lavdopts skiploopfilter=all") and
   Skip frames. 
   This may allow "slow" computers (like mine) to play H.264 HD videos, 
   although these options may produce a high quality loss. I prefer to scale
   down a little bit the image (1024x576 or 768x432).

(2007-10-21)
 * Now the aspect ratio settings should work when using the mplayer own window.
   Note: the option "Autodetect" may not work correctly in this case.

(2007-10-19)
 * Updated the Polish translation.
 * Improved layout of section "Preferred audio & subtitles" in 
   Preferences->General.

(2007-10-18)
 * (Internal change) Don't use the pref object in mplayerwindow.
 * Now the first track number for initial_subtitle_track and 